@@ -1,5 +1,7 @@
 *SVN*
 
+* Ensure that respond_to? considers dynamic finder methods. Closes #11538. [floehopper]
+
 * Ensure that save on parent object fails for invalid has_one association. Closes #10518. [Pratik]
 
 * Remove duplicate code from associations. [Pratik]
